# mis-eventos

./: .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  (+2 more)
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 31828c1fceaf_add_speaker_session_registration_tables.py  60d39c4e5609_create_event_table_with_state_machine.py  a62e72121673_create_user_table_with_role_enum.py
backend/src/mis_eventos/: __init__.py  main.py
backend/src/mis_eventos/api/: ai.py  auth.py  events.py  health.py  registrations.py  sessions.py  speakers.py
backend/src/mis_eventos/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/src/mis_eventos/db/: session.py
backend/src/mis_eventos/llm/: provider.py
backend/src/mis_eventos/models/: __init__.py  event.py  registration.py  session.py  speaker.py  user.py
backend/src/mis_eventos/schemas/: auth.py  event.py  registration.py  session.py  speaker.py
backend/src/mis_eventos/services/: capacity.py  conflict_validator.py  description_generator.py  event_state.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_conflict_validator.py  test_event_state.py  test_events.py  test_health.py  test_middleware.py  test_registrations.py  test_sessions.py
docs/: AI_USAGE.md  ARCHITECTURE.md  SPEC.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
tasks/: plan.md  todo.md
(+21 files in other folders)
