[project]
name = "mis-eventos"
version = "0.1.0"
description = "Plataforma web Full Stack para gestion de eventos - Reto Serviinformacion 2026"
requires-python = ">=3.12"
authors = [{ name = "Lady Katherine Gonzalez", email = "lady.kgonzalez@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mis_eventos"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
